--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt.br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meu futuro</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>meu futuro</title>
 </head>
 <body>
-    
+
+<header>
+<li>
+<h1>Jocimara</h1>
+<h2>emfermeira</h2>
+<img src="jocima" alt="">
+
+</li>
+</header>
+
+
+<section>
+<div>
+<img src="download (1).jpeg" alt="">
+<p></p>
+<p>meu sonho e ser emfermeira</p>
+<p>emfermeira</p>
+</div>
+
+
+</section>
+
 </body>
 </html>
