--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header>
 <li>
 <h1>Jocimara</h1>
-<h2>emfermeira</h2>
-<img src="jocima" alt="">
+<h2>enfermeira</h2>
+<img src="" alt="">
 
 </li>
 </header>
@@ -19,10 +19,10 @@
 
 <section>
 <div>
-<img src="download (1).jpeg" alt="">
+<img src="jocima" alt="">
 <p></p>
-<p>meu sonho e ser emfermeira</p>
-<p>emfermeira</p>
+<p>meu sonho e fazer curso de enfermeira para ajudar as pessoas, e fazer atendimento as pessoas necessitadas de medicamentos. </p>
+<p>enfermeira</p>
 </div>
 
 
