--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>meu futuro</title>
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-<li>
-<h1>Jocimara</h1>
-<h2>enfermeira</h2>
+<header class="cabeçalho">
+<li class="lista-principal">
+<h1 class="item">Jocimara</h1>
+<h2 class="item">enfermeira</h2>
 <img src="" alt="">
 
 </li>
@@ -18,7 +20,7 @@
 
 
 <section>
-<div>
+<div class="sonhos">
 <img src="jocima" alt="">
 <p></p>
 <p>meu sonho e fazer curso de enfermeira para ajudar as pessoas, e fazer atendimento as pessoas necessitadas de medicamentos. </p>
