--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <li class="lista-principal">
 <h1 class="item">Jocimara</h1>
 <h2 class="item">enfermeira</h2>
-<img src="" alt="">
+<img src="jocima" alt="">
 
 </li>
 </header>
