--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section>
 <div class="sonhos">
-<img src="jocima" alt="">
+<img src="jocimara.webp" alt="">
 <p></p>
 <p>meu sonho e fazer curso de enfermeira para ajudar as pessoas, e fazer atendimento as pessoas necessitadas de medicamentos. </p>
 <p>enfermeira</p>
