--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
 <title>meu futuro</title>
 
 <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
 <header class="cabeçalho">
-<li class="lista-principal">
 <h1 class="item">Jocimara</h1>
 <h2 class="item">enfermeira</h2>
-<img src="jocima" alt="">
-
-</li>
+<img src="jocimara.jpg" alt="">
 </header>
 
-
 <section>
+
 <div class="sonhos">
-<img src="jocimara" alt="">
+<img src="download (1).jpeg" alt="aqui tem uma imagem de professora">
 <p></p>
-<p>meu sonho e fazer curso de enfermeira para ajudar as pessoas, e fazer atendimento as pessoas necessitadas de medicamentos. </p>
-<p>enfermeira</p>
+<p>meu sonho e ser professora</p>
+<p>professora</p>
 </div>
 
 
