--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <section>
 
 <div class="sonhos">
-<img src="download (1).jpeg" alt="aqui tem uma imagem de professora">
+<img src="jocimara.webp" alt="">
 <p></p>
-<p>meu sonho e ser professora</p>
+<p>meu sonho é  </p>
 <p>professora</p>
 </div>
 
