--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <div class="sonhos">
 <img src="jocimara.webp" alt="">
 <p></p>
-<p>meu sonho é  </p>
-<p>professora</p>
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera.</p>
+<p>enfermeira</p>
 </div>
 
 
