--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="sonhos">
 <img src="jocimara.webp" alt="">
 <p></p>
-<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera.</p>
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera</p>
 <p>enfermeira</p>
 </div>
 
