--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section>
 
 <div class="sonhos">
-<img src="joci.jpg" alt="">
+<img src="jocimara" alt="">
 <p></p>
 <p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera</p>
 <p>enfermeira</p>
