--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="sonhos">
 <img src="jocimara" alt="">
 <p></p>
-<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera</p>
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera, vou fazer esse curso porue quando eu era criança eu tinha eu sonho de ser enfemeira
 <p>enfermeira</p>
 </div>
 
