--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <div class="sonhos">
 <img src="jocimara" alt="">
 <p></p>
-<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera, vou fazer esse curso porue quando eu era criança eu tinha eu sonho de ser enfemeira
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera, 
+    eu quero fazer esse curso porque quando eu era crimça tinha um sonho de ser enfemeira e vou realizar esse sonho</p>
+
 <p>enfermeira</p>
 </div>
 
