--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="sonhos">
 <img src="jocimara" alt="">
 
-<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficas muito tempo na fila de espera, 
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes fica muito tempo na fila de espera, 
     eu quero fazer esse curso porque quando eu era crimça tinha um sonho de ser enfemeira e vou realizar esse sonho.</p>
 
 <p>enfermeira</p>
