--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img src="jocimara" alt="">
 
 <p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes fica muito tempo na fila de espera, 
-    quero fazer esse curso porque quando eu era crinça tinha um sonho de ser enfemeira espero conseguir realizar esse sonho.</p>
+   eu quero fazer esse curso porque quando eu era crinça tinha um sonho de ser enfemeira espero conseguir realizar esse sonho.</p>
 
 <p>enfermeira</p>
 </div>
