--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <div class="sonhos">
 <img src="jocimara" alt="">
 
-<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes fica muito tempo na fila de espera, 
-   eu quero fazer esse curso porque quando eu era crinça tinha um sonho de ser enfemeira espero conseguir realizar esse sonho.</p>
+<p>meu sonho é fazer curso de enfermagem para ajudar as pessoas, e não deixar os pacientes ficar muito tempo na fila de espera, 
+   quero fazer esse curso porque quando eu era crinça tinha um sonho de ser enfemeira pretendo realizar esse sonho.</p>
 
 <p>enfermeira</p>
 </div>
